# vim:set noet ts=4:
#
# ibus-libpinyin - Intelligent Pinyin engine based on libpinyin for IBus
#
# Copyright (c) 2008-2010 Peng Huang <shawn.p.huang@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

setup_libpinyin_PYTHON = \
	main2.py \
	version.py \
	dicttreeview.py \
	ibus-libpinyin-preferences.ui \
	$(NULL)

setup_libpinyindir = $(datadir)/ibus-libpinyin/setup

libexec_SCRIPTS = \
	ibus-setup-libpinyin \
	$(NULL)

CLEANFILES = \
	*.pyc \
	$(NULL)

EXTRA_DIST = \
	version.py.in \
	ibus-setup-libpinyin.in \
	$(NULL)

test-libpinyin:
	$(ENV) DBUS_DEBUG=true \
		   IBUS_LOCALEDIR=@localedir@ \
		   PYTHONPATH=$(abs_top_srcdir):$(pyexecdir) \
		   $(PYTHON) $(srcdir)/main2.py pinyin

test-libbopomofo:
	$(ENV) DBUS_DEBUG=true \
		   IBUS_LOCALEDIR=@localedir@ \
		   PYTHONPATH=$(abs_top_srcdir):$(pyexecdir) \
		   $(PYTHON) $(srcdir)/main2.py bopomofo
